--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage": "https://yojim6o.github.io/Amenities-App-React/",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
