implement slider animation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.14.0",
     "geolocation": "^0.2.0",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-loader": "^2.4.0",
     "react-redux": "^4.4.5",
